compiler/tests/fa/errors/pure_global_write.salam
// انتظار: خطا۰۱۳
// زبان: فارسی
متغیر جمع := 0

خالص تابع افزودن(مقدار : صحیح) : صحیح:
    جمع = جمع + مقدار
    بازگشت جمع
تمام

تابع اصلی:
    چاپ افزودن(2)
تمام
